2004-12-09  Michael Yount <csf@moscow.com>

	* files/INDEX.pl:  The "unregistered" file has a "noweb"
	counterpart.

	* lib/Majordomo.pm:  (trigger, _unregister)  Send farewell
	messages as appropriate when an address is unregistered.
	Suggested by Brock Rozen.

	* lib/mj_cf_data.pl, mj_cf_defs.pl:  The farewell and
	farewell_files settings are also GLOBAL.

	* lib/Mj/CommandProps.pm:  Support the unregister-farewell
	and unregister-nofarewell commands.

2004-12-08  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Support the who-noname command,
	which prints the plain address without comments.
	Suggested by Steven Orr.

	* lib/Mj/Format.pm:  (who)  Support the who-noname command.

2004-12-01  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_subscribe)  Log a "register" event
	if the subscription causes the subscriber to be registered.

2004-11-22  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (compile_pattern)  Change the 'ALL'
	pattern to work around a bug for the empty pattern (//).
	Thanks to Dean Collins.

2004-11-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (who_chunk)  Fix MSGNO substitution.
	Thanks to Roger Klorese.

2004-11-05  Michael Yount <csf@moscow.com>

	* lib/Mj/Addr.pm:  (setcomment)  Add quotes if needed.
	(_xform)  Always validate the address.  Thanks to SRE.

	* lib/Mj/Resend.pm:  (_exclude)  Skip invalid addresses.

2004-11-04  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (g_get, index, put)  Use the FULLPATH
	substitution to avoid a substitution race condition.
	Thanks to SRE.

2004-10-30  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Place the mj_queueserv lock in the lock
	directory.  Suggested by SRE.

	* lib/Mj/Archive.pm:  (add_done)  Sort the archives to 
	prevent a race condition.
	(get_all_data, expand_range)  Support split archives.
	Thanks to Roger Klorese.
	
	* lib/Mj/Lock.pm:  (expire_locks)  Do not remove the queueserv
	lock file.
