@@ -1,3 +1,9 @@
+2005-01-16  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Access.pm:  (_d_advertise)  Show information about
+	a list if an admin password for the list is used.
+	Thanks to Roger Klorese.
+
 2004-12-09  Michael Yount <csf@moscow.com>
 
 	* files/INDEX.pl:  The "unregistered" file has a "noweb"
